--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,6 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version = 0.12.12
 
 # Mod Properties
-	mod_version = 0.0.1+1.8.9
+	mod_version = 0.0.1
 	maven_group = me.voidxwalker
 	archives_base_name = worldpreview
