fix naming errors, rewrite LoadingScreenRendererMixin

--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,12 @@ loom {
 	// Only needed for versions not available from vanilla launcher by default.
 	// customMinecraftManifest.set("https://meta.legacyfabric.net/v2/manifest/${minecraft_version}")
 
-	// Required by 1.7.x
-	// runs {
-	// 	client {
-	// 		programArgs "--userProperties", "{}"
-	// 	}
-	// }
+	//Required by 1.7.x
+	runs {
+		client {
+			programArgs "--userProperties", "{}"
+		}
+	}
 }
 
 def lwjgl2 = !project.minecraft_version.startsWith("1.13")
@@ -40,7 +40,7 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.legacyfabric:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	compileOnlyApi files("libs/atum-1.1.3+1.8.9.jar")
+	compileOnlyApi files("libs/atum-1.1.3+1.7.10.jar")
 	if (lwjgl2) {
 		if (currentOs.contains("mac")) {
 			implementation 'org.lwjgl.lwjgl:lwjgl_util:2.9.4-nightly-20150209'
